syntax = "proto3";

package msger.api.system.v1;

option go_package = "github.com/ryanreadbooks/whimer/msger/api/system/v1";

import "msg/msg.proto";

service NotificationService {
  // 系统通知
  rpc NotifySystemNotice(NotifySystemNoticeRequest)
      returns (NotifySystemNoticeResponse);
  // 回复我的
  rpc NotifyReplyMsg(NotifyReplyMsgRequest) returns (NotifyReplyMsgResponse);
  // @我的
  rpc NotifyMentionMsg(NotifyMentionMsgRequest)
      returns (NotifyMentionMsgResponse);
  // 收到的赞
  rpc NotifyLikesMsg(NotifyLikesMsgRequest) returns (NotifyLikesMsgResponse);
}

message NotifySystemNoticeRequest {}

message NotifySystemNoticeResponse {}

message NotifyReplyMsgRequest {}

message NotifyReplyMsgResponse {}

message MentionMsgContent {
  int64 uid = 1;        // 发起者
  int64 target_uid = 2; // 被@的人
  bytes content = 3;    // 内容
}

message NotifyMentionMsgRequest { repeated MentionMsgContent mentions = 1; }

message NotifyMentionMsgResponse {
  map<int64, msger.api.msg.StringList> msgIds = 1;
}

message NotifyLikesMsgRequest {}

message NotifyLikesMsgResponse {}